# lentera

./: .env.example  .gitignore  Anchor.toml  FROM_MANUS_1.markdown  FROM_MANUS_2.markdown  FROM_MANUS_3.md  PROJECTDETAIL.md  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
idl/: lentera.json
programs/lentera/: Cargo.toml
programs/lentera/src/: instructions.rs  lib.rs  state.rs
public/: manifest.json  sw.js
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/about/: page.tsx
src/app/characters/: page.tsx
src/app/dashboard/: page.tsx
src/app/gallery/: page.tsx
src/app/game/: page.tsx
src/app/guild/: page.tsx
src/app/leaderboard/: page.tsx
src/app/quest/: page.tsx
src/app/settings/: page.tsx
src/components/battle/: BattleUI.tsx
src/components/characters/: CharacterCard.tsx
src/components/game/: GameEngineClient.tsx  GameOverlay.tsx
src/components/gamification/: AchievementsPanel.tsx  DailyQuestsPanel.tsx  ProgressionBar.tsx  index.ts
src/components/layout/: Navbar.tsx
src/components/leaderboard/: Leaderboard.tsx
src/components/quest/: QuestComponents.tsx  QuestModal.tsx
src/components/ui/: Button.tsx  Card.tsx  Loading.tsx  PageAnimator.tsx
src/components/wallet/: WalletButton.tsx
src/data/: characters.ts  quests.ts
src/lib/: animation-presets.tsx  design-tokens.ts  game-engine.ts  game-hooks.ts  game-state.tsx  gamification.ts  solana-rewards.tsx  use-service-worker.ts
tests/: character-data.test.ts  elemental-system.test.ts  setup.ts
(+2 files in other folders)
