[package]
name = "lentera"
version = "0.1.0"
edition = "2021"
description = "Lentera GameFi Smart Contract"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["no-entrypoint"]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
mpl-token-metadata = "1.13.1"
solana-program = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = true